scripts/tests/errors/err_nested_unclosed_braces.bu
// BAD: nested unclosed braces
{
    {
        {
            var x = 1;

while (true) {
    break;
}
print("should not reach here");
